resolve footer overflow on home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,9 +51,7 @@ nav li span {
 }
 
 /*----- FOOTER -----*/
-footer {
-  position: absolute;
-  bottom: 0;
+footer {  
   width: 100%;
   background-color: #333;
   color: #000;
